--- a/index.html
+++ b/index.html
@@ -53,60 +53,13 @@
 	<!-- End Home Section -->
 
 
-<!-- Start About Me Section -->
 
-<section class="ftco-about img ftco-section" id="about"></section>
-	<h4>Di play yaaak💕</h4>
-	<div class="container">
-		<div class="row d-flex no-gutters">
-			<div class="col-md-6 col-lg-6 d-flex">
-				<div class="img-about img d-flex align-items-stretch">
-					<div class="overlay"></div>
-					<div class="img img-video d-flex align-self-stretch align-items-center" style="background-image:url(images/about-2.jpg);">
-						<div class="video justify-content-center">
-								<a href="https://www.tiktok.com/@nrlhm/video/7387934384860499206?is_from_webapp=1&sender_device=pc&web_id=7338395429741463048" class="icon-video popup-vimeo d-flex justify-content-center align-items-center">
-									<span class="ion-ios-play"></span>
-								</a>
-							</div>
-						</div>			
-				</div>
-			</div>
-		</div>
-	
-	</div>
 
 
 
 
 		
 		<section class="ftco-section work-single ftco-no-pt ftco-no-pb">
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
-			<p></p>
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 d-flex align-items-stretch">
@@ -115,7 +68,7 @@
 					<div class="col-md-6 py-md-5">
 						<div class="text pl-md-5 py-5">
 							<h2><a href="work-single.html">ciee yang ultah nihh💖</a></h2>
-							<p>Gimana kabarnya sayangg?? Sehat? Alhamdulillah kalau sehat. Karena aku males tulis di kertas dan emang kek udah b aja gituhh, yaudah aku code aja dijadiin web gini hehe😁. Resiko pacaran sama anak programmer sii jadi giniii😭🤣. Just wanna say HAPPY BIRTHDAY YUHUUUU💖. Yeee makin tuaaaa candaaa😁. Aku doain apapunn yang terbaik buat kamu mau itu di perjalanan hidup kamu, karir, dll. Apapun badai yang menghadang kamu, tenang badai pasti berlalu. Aku yakin kamu pasti bisa laluin itu😊💖. Inget di lagu di atas juga liriknya "When doubt creeps into your mind
+							<p>Gimana kabarnya sayangg?? Sehat? Alhamdulillah kalau sehat. Karena aku males tulis di kertas dan emang kek udah b aja gituhh, yaudah aku code aja dijadiin web gini hehe😁. Resiko pacaran sama anak programmer sii jadi giniii😭🤣. Just wanna say HAPPY BIRTHDAY YUHUUUU💖. Yeee makin tuaaaa candaaa😁. Aku doain apapunn yang terbaik buat kamu mau itu di perjalanan hidup kamu, karir, dll. Apapun badai yang menghadang kamu, tenang badai pasti berlalu. Aku yakin kamu pasti bisa laluin itu😊💖. Inget di lagu ultah kamu juga liriknya "When doubt creeps into your mind,
 								Always remember, I'm here" 💖.  </p>
 							<p>Maaf ya aku belum bisa ngasih yang banyak dan yang wahhh gitu. Kaya kado ini aja. Makanya aku lebih effort in buat kado nya dari skill yang aku bisa, kaya di musik aku bikinin lagu, bikin instrumen dan nyanyiin di upload jugaa. Trus kadooo yang ada gambar uculnya ituuu aku gambar sendiri organik. Terakhir aku ngasih ucapan pake codingan disini💖💖. TAPIII, aku kan udah bilang ke kamu kalau aku bakalan usahain buat improve diri aku dan bisa ngehasilin cuan juga cuz I motivated by u jugaaa yahhh💖 So wait for it, OK??? Insya Allah nanti mah aku bisa ngasih kamu yang lebih nanti💖 Tapi keknya perayaan ultah paling berkesan mah kalo kita udah serumah siii keknya🤣💖. Apasiii malah bahas2 serumah gini🤣 Dahhh pokoknya intinya ...</p>
 							
